<resources>
    <string name="facebook_app_id">1359903231412339</string>
    <string name="fb_login_protocol_scheme">fb1359903231412339</string>
    <string name="facebook_client_token">04fa31af1e8b16ee5e5e69705cbbc163</string>
    <string name="app_name">IoTRemote</string>
    <string name="didn_t_receive_the_otp">Didn\'t Receive The OTP?</string>
    <string name="kh_ng_nh_n_c_m">Không nhận được mã?</string>
    <string name="g_i_l_i">Gửi lại</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="action_home">Action Home</string>
    <string name="button_2">Button 2</string>
    <string name="button_pulse">Button Pulse</string>
    <string name="button_personal">Button Personal</string>
    <string name="button_menu">Button Menu</string>
    <string name="button_home">Button Home</string>
    <string name="sign_in_1">Welcome back! Nice to see you 👋</string>
    <string name="sign_in_2">Email</string>
    <string name="sign_in_3">Your Password</string>
    <string name="sign_in_4">Forget Password?</string>
    <string name="sign_in_5">Sign in</string>
    <string name="sign_in_6">Sign in with</string>
    <string name="sign_in_7">No account? Sign up now</string>
    <string name="sign_up_1">Welcome! Sign up to begin</string>
    <string name="sign_up_2">Username</string>
    <string name="sign_up_3">Email</string>
    <string name="sign_up_4">Password</string>
    <string name="sign_up_5">Confirm Password</string>
    <string name="sign_up_6">Sign up</string>
    <string name="sign_up_7">Sign up with</string>
    <string name="sign_up_8">Already have account? Sign in now!</string>
    <string name="map_1">Map Location</string>
    <string name="map_2">null</string>
    <string name="map_3">null</string>
    <string name="asset_detail_1">Attributes</string>
    <string name="asset_detail_2">Buffer</string>
    <string name="asset_detail_3">Occupied Spaces</string>
    <string name="asset_detail_4">Total Spaces</string>
    <string name="asset_detail_5">Open Spaces</string>
    <string name="asset_detail_6">Daily tariff</string>
    <string name="asset_detail_7">Hourly tariff</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>
    <string name="verifying">Verifying</string>\
    <string name="hd_map">VIEW THE MAP</string>
    <string name="hd_viewmap">VIEW DETAILS</string>
    <string name="hd_chart">VISUALIZATIONS</string>
    <string name="hd_ai">VOICE ASSISTANT</string>
    <string name="derc_map">With IoTRemote you can view assets where available</string>
    <string name="derc_view_map">You can see the detailed parameters of the available assets of your choice</string>
    <string name="derc_chart">You see detailed parameters visually in the form of graphs</string>
    <string name="derc_ai">You can use the voice assistant to command to go to the screen you need or ask how to use the app</string>
</resources>