<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up_1"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@id/et_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ngoc_textbox_1"
            android:fontFamily="@font/roboto"
            android:hint="@string/sign_up_2"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_1" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ngoc_textbox_1"
            android:fontFamily="@font/roboto"
            android:hint="@string/sign_up_3"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_4" />

        <EditText
            android:id="@+id/tv_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ngoc_textbox_1"
            android:fontFamily="@font/roboto"
            android:hint="@string/sign_up_4"
            android:inputType="textPassword"
            android:padding="10dp"
            android:password="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/et_password_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_password_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ngoc_textbox_1"
            android:fontFamily="@font/roboto"
            android:hint="@string/sign_up_5"
            android:inputType="textPassword"
            android:padding="10dp"
            android:password="true"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_5"></EditText>


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:padding="10dp"
            android:textSize="17dp"
            android:text="@string/sign_up_6"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_22"
            app:layout_constraintTop_toBottomOf="@+id/et_password_2"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tv_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_7"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/btn_google_sign_in"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
            tools:layout_editor_absoluteX="20dp"></TextView>

        <ImageButton
            android:id="@+id/btn_google_sign_in"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/_991148"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toBottomOf="@id/tv_22"></ImageButton>

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="26dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/vector__2_"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in_now"
            app:layout_constraintEnd_toStartOf="@id/btn_google_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_22"></ImageButton>

        <Button
            android:id="@+id/btn_sign_in_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/ngoc_backgr_white"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up_8"
            android:textColor="@color/green"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google_sign_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>