<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_1"></ImageButton>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_login"
        android:layout_width="198dp"
        android:layout_height="202dp"
        android:background="@drawable/login"
        app:layout_constraintBottom_toTopOf="@id/tv_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></pl.droidsonroids.gif.GifImageView>

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_1"
        android:textSize="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/gif_login"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:backgroundTint="#f7f8f9"
        android:fontFamily="@font/roboto"
        android:hint="Enter your password"
        android:padding="15dp"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_forget_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:backgroundTint="#f7f8f9"
        android:fontFamily="@font/roboto"
        android:hint="Enter your Username"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_1" />

    <Button
        android:id="@+id/btn_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:backgroundTint="@color/ngoc_backgr_white"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in_4"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@drawable/ngoc_button_bg"
        android:padding="20dp"
        android:text="@string/sign_in_5"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/btn_forget_pass"
        app:layout_constraintBottom_toTopOf="@id/tv_22"/>
    <TextView
        android:id="@+id/tv_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/line"
        android:drawableRight="@drawable/line"
        android:text="@string/sign_in_6"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@id/btn_google"></TextView>
    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:background="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/tv_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up_now"></ImageButton>
    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:background="@drawable/facebook"
        app:layout_constraintTop_toBottomOf="@id/tv_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_google"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up_now"></ImageButton>
    <ImageButton
        android:id="@+id/btn_apple"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:background="@drawable/apple"
        app:layout_constraintTop_toBottomOf="@id/tv_22"
        app:layout_constraintStart_toEndOf="@id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up_now"></ImageButton>
    <Button
        android:id="@+id/btn_sign_up_now"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ngoc_backgr_white"
        android:text="@string/sign_in_7"
        android:textSize="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        app:layout_constraintBottom_toBottomOf="parent"

        android:fontFamily="@font/roboto_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>