<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OTPVerification">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageButton
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginLeft="-180dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/img" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-60dp"
            android:layout_marginTop="40dp"
            android:text="OTP Xác minh"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="Nhập mã xác minh mà chúng tôi vừa gửi đến địa chỉ email của bạn"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/lock"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <EditText
                android:id="@+id/code1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/code2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/code3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/code4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kh_ng_nh_n_c_m"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextResendOTP"
                android:layout_marginStart="8dp"
                android:text="@string/g_i_l_i"
                android:textColor="@color/teal_200"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </LinearLayout>
        <Button
            android:id="@+id/acceptbutton"
            android:layout_marginTop="50dp"
            android:text="@string/x_c_nh_n"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"/>



    </LinearLayout>

</ScrollView>